<resources>
    <string name="app_name">CraftBeer</string>
    <string name="abv">ABV</string>
    <string name="summary">Summary</string>
    <string name="ingredients">Ingredients</string>
    <string name="food_pairings">Food Pairings</string>
    <string name="brewers_tips">Brewer\'s Tips</string>
    <string name="sample_tip_text">While it may surprise you, this version of Punk IPA isn\'t dry hopped but still packs a punch! To make the best of the aroma hops make sure they are fully submerged and add them just before knock out for an intense hop hit.</string>
    <string name="sample_pairing_text">Spicy carne asada with a pico de gallo sauce</string>
    <string name="sample_description_text">Our flagship beer that kick started the craft beer revolution. This is James and Martin\'s original take on an American IPA, subverted with punchy New Zealand hops. Layered with new world hops to create an all-out riot of grapefruit, pineapple and lychee before a spiky, mouth-puckering bitter finish.</string>
    <string name="abv_colon">ABV:</string>
    <string name="ibu_colon">IBU:</string>
    <string name="no_network_connection_please_try_again">No network connection. Please try again.</string>

</resources>