<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="beer_description"
            type="String" />

        <variable
            name="food_pairings"
            type="String" />

        <variable
            name="brewers_tips"
            type="String" />
    </data>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                fontPath="carbon/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{beer_description}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_dark"
                tools:ignore="MissingPrefix"
                tools:text="@string/sample_description_text" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"

                android:background="@color/gray_dark" />

            <TextView
                fontPath="carbon/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/food_pairings"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/gray_dark"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/pairings"
                fontPath="carbon/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{food_pairings}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/gray_dark"
                tools:ignore="MissingPrefix"
                tools:text="@string/sample_pairing_text" />

            <TextView
                fontPath="carbon/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/brewers_tips"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/gray_dark"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tips"
                fontPath="carbon/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@{brewers_tips}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/gray_dark"
                tools:ignore="MissingPrefix"
                tools:text="@string/sample_tip_text" />
        </LinearLayout>
    </ScrollView>
</layout>